# lordcord-beta

./: .env.example  .gitignore  .isort.cfg  CHANGELOG.md  README.md  SECURITY.md  TORTOISE_ORM.py  data.json  extra_run.py  loc_info.json  pyproject.toml  requirements.txt  run.py  temp.json  test.py
.github/workflows/: pylint.yml  python-app.yml  untitests.yml
assets/: cards.json  image_config.json  log_config.json
bot/: main.py
bot/cogs/: basic.py  economy.py  help.py  ideas_mod.py  interactions.py  leadeboards.py  moderations.py  music.py  reminder.py  teams.py
bot/cogs/callbacks/: tg.py  vk.py
bot/cogs/events/: cmc_react.py  errors.py  guilds.py  interactions.py  members.py  message.py  presence.py  punishments.py  ratelimit.py  reactions.py  ready.py  roles.py  socketfix.py  (+4 more)
bot/databases/: __init__.py  datastore.py  db.py  db_engine.py  localdb.py  models.py  varstructs.py
bot/languages/: __init__.py  commands_data.json  help.py  i18n.py  localization.json  localization_any.json  works.json
bot/misc/: api_site.py  env.py  giveaway.py  ipc_handlers.py  logger.py  lordbot.py  music.py  ratelimit.py  tickettools.py  time_transformer.py  utils.py
bot/resources/: errors.py  ether.py  info.py
bot/views/: blackjack.py  create_poll.py  delcat.py  delete_message.py  economy_shop.py  giveaway.py  help.py  ideas.py  information_dd.py  menus.py  music.py  selector_music.py  settings_menu.py  tic_tac_toe.py  translate.py
db/: .sqlite3  .sqlite3-shm  .sqlite3-wal
templates/: response.html
unittests/: emoji_validator.py  generator_message.py  templates.py
(+169 files in other folders)
