[tool.aerich]
tortoise_orm = "TORTOISE_ORM.TORTOISE_ORM"
location = "./migrations"
src_folder = "./."

[tool.poetry]
name = "lordbeta"
version = "0.7.9a"
description = "Discord bot"
authors = ["LordCode <9999269010dddd@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
